Fixing footer that was overflowing on mobile + adjusting sizes

--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -6,18 +6,39 @@ footer {
     min-height: 60vh;
     padding-left: 10vw;
     padding-top: 10vh;
+    
 
     h2 {
         font-weight: 300;
         font-size: 4rem;
         letter-spacing: 0.14rem;
         margin-bottom: 3rem;
+
+        @media screen and (max-width: @md-breakpoint-width) {
+            margin-bottom: 2rem;
+            font-size: 2rem;
+        }
     }
 
     p {
-        font-size: 18px;
+        font-size: 1.125rem;
         font-weight: 300;
         letter-spacing: 0.14rem;
         line-height: 130%;
+        overflow: hidden;
+
+        @media screen and (max-width: @md-breakpoint-width) {
+            font-size: 0.9rem;
+            line-height: 120%;
+        }
+    }
+
+    .spacer {
+        margin-bottom: 3rem;
+        width: 10px;
+
+        @media screen and (max-width: @md-breakpoint-width) {
+            margin-bottom: 2rem;
+        }
     }
 }
