--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -14,7 +14,7 @@
 body {
     background-color: @bg-color;
     color: @darkgray;
-    font-family: 'Roboto', sans-serif
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
